Bug 377358 - the animation properties of a layer (show in timeline / onion skin) are lost when merging layers
Summary: the animation properties of a layer (show in timeline / onion skin) are lost ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1.2
Platform: Other Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-07 23:07 UTC by gordie.lachance+dev
Modified: 2018-04-03 11:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gordie.lachance+dev 2017-03-07 23:07:21 UTC
Hi !
The "show in timeline" property of a layer, and the "onion skin" one (enabled or disabled) are lost when layers are merged.

I guess that the normal behaviour would be that the 'new' layer would have the settings that had the bottom layer before it was merged, no ?

Thanks !
Comment 1 joupent 2018-03-26 13:01:15 UTC
Git commit 2b7c34108901249d940500cf8ddf91e41d7512a0 by Jouni Pentikäinen.
Committed on 26/03/2018 at 12:59.
Pushed by jounip into branch 'master'.

Keep show in timeline and onion skin options when merging layers

M  +29   -1    libs/image/kis_layer_utils.cpp

https://commits.kde.org/krita/2b7c34108901249d940500cf8ddf91e41d7512a0
Comment 2 Halla Rempt 2018-04-03 11:47:39 UTC
Git commit 25f5c168b26122b30e63e3a3ef73e1237ca6f81c by Boudewijn Rempt, on behalf of Jouni Pentikäinen.
Committed on 03/04/2018 at 11:16.
Pushed by rempt into branch 'krita/4.0'.

Keep show in timeline and onion skin options when merging layers
(cherry picked from commit 2b7c34108901249d940500cf8ddf91e41d7512a0)

M  +29   -1    libs/image/kis_layer_utils.cpp

https://commits.kde.org/krita/25f5c168b26122b30e63e3a3ef73e1237ca6f81c