Keep show in timeline and onion skin options when merging layers

BUG: 377358